PyMaker/datas/object2/RawHTML/i10701/Python_DOC_referPages.python-oneliner-with-if-statement.txt
<div class="post-text" itemprop="text">
<p>I am wondering if it is possible to write the following python if statement in one line. I would also like to know why I am getting the error below:</p>
<pre><code>python -c 'a=1; if True: print a; else: a=a+1'

  File "&lt;string&gt;", line 1
    a=1; if True: print a; else: a=a+1
          ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Only <a href="https://docs.python.org/3/reference/compound_stmts.html#grammar-token-stmt_list" rel="nofollow">simple statements can appear in a semicolon-separate statement list</a>:</p>
<pre><code>stmt_list     ::=  simple_stmt (";" simple_stmt)* [";"]
</code></pre>
<p>An <code>if</code> statement is a compound statement, so it's invalid syntax to include it.</p>
<p>Allowing compound statements in a semicolon-separated list would lead to ambiguity.  This is valid syntax:</p>
<pre><code>if condition: a = 1; b = 1
</code></pre>
<p>Both assignments are only executed if the <code>condition</code> is true, and this is how most people would intuitively read the statement.  If we allowed</p>
<pre><code>c = 1; if condition: a = 1; b = 1
</code></pre>
<p>it would become unclear for readers of the code whether the <code>b = 1</code> is part of the <code>if</code> statement or not.</p>
<p>Python uses indentation to delimit code suites, and you can't use indentation in a semicolon-separated statement list.</p>
</div>
<span class="comment-copy">You didn't include the error message, but it's probably a <code>SyntaxError</code>.  And no, you can't put all that on a single line.  You can write code with the same meaning on a single line, but not using the same control structures.  And why would you want to?</span>
<span class="comment-copy">exec ('a = 1\nif True:\n\tprint a\nelse:\n\t a+=1')   ;=) (please note the smiley)</span>
<span class="comment-copy">Code with the same meaning on a single line would be <code>print 1</code>.</span>
<span class="comment-copy">Some good answers are here: <a href="http://stackoverflow.com/questions/38883470/python-one-liner-if-else-statement" title="python one liner if else statement">stackoverflow.com/questions/38883470/…</a></span>
<span class="comment-copy">@SvenMarnach You are right, sorry I forgot but added it to my question, now. Some people want oneliners in their shell scripts.</span>
<span class="comment-copy">What I was looking for..</span>
<span class="comment-copy">It's not just the indentation, this is also invalid: <code>a=1;print(a) if True else a=a+1</code></span>
<span class="comment-copy">@Chris_Rands: This is invalid for completely unrelated reasons.  The confitional expression <code>x if condition else y</code> is an expression, and <code>x</code> and <code>y</code> must be expressions, too.  An assignment isn't an expression in Python (and it Python 2, neither is <code>print(a)</code>).</span>
